--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Okabe - Full-Stack Developer Portfolio. Crafting digital experiences with clean code and innovative solutions." />
-    <meta name="keywords" content="developer, portfolio, react, typescript, full-stack, web development" />
+    <meta name="description" content="Okabe - Frontend Developer Portfolio. Crafting digital experiences with clean code and innovative solutions." />
+    <meta name="keywords" content="developer, portfolio, react, typescript, frontend, web development" />
     <meta name="author" content="Okabe" />
-    <title>Okabe - Full-Stack Developer</title>
+    <title>Okabe - Frontend Developer</title>
   </head>
   <body>
     <div id="root"></div>
